--- a/config/git/.gitconfig
+++ b/config/git/.gitconfig
@@ -8,6 +8,13 @@
 [push]
 	default = current
 [color]
-	ui = auto
+	ui = true
 [alias]
 	pushall = !git remote | xargs -L1 git push --all
+	conflicts = !git ls-files -u | cut -f 2 | sort -u && echo "Finished git conflicts"
+	pruner = !git prune --expire=now && git reflog expire --expire-unreachable=now --rewrite --all && git fetch --all --prune && git gc --prune && git remote prune origin && echo "Finished git pruner"
+	switch = !node ~/www/craigiswayne.github.com/dotfiles/git/git.js switch "$@"
+[fetch]
+    prune = true
+[github]
+    user = craigiswayne
